WIP SPIKE: add hooks for other type